<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataFilterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importanza_report"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleziona l'importanza dei report da mostrare"
                    android:textSize="13sp"
                    android:paddingTop="3dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/filter_importanza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_textview"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/_1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_filter_parametri_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parametri_visualizzati"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/data_filter_parametri"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Temperatura - Pressione Sistolica - Pressione Diastolica - Glicemia - Peso"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_personal_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_inizio"
                    android:textSize="20sp"
                    android:layout_marginBottom="4dp"
                    android:padding="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_fine"
                    android:textSize="20sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/filter_data_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oggi"
                    android:textSize="20sp"
                    android:layout_marginBottom="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/background_textview"/>

                <TextView
                    android:id="@+id/filter_data_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oggi"
                    android:textSize="20sp"
                    android:layout_marginTop="2dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/background_textview" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/filter_mostra_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostra_i_report"
                android:onClick="changeListReport"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/recycler_view" />

    </ScrollView>

</LinearLayout>